--- a/pom.xml
+++ b/pom.xml
@@ -567,11 +567,11 @@
   <distributionManagement>
      <repository>
         <id>maven-releases</id>
-        <url>http://localhost:8081/repository/maven-releases/</url>		<!-- Enter Nexus http://PublicIP:8081/repository/maven-releases/ -->
+        <url>http://18.60.39.87:8081/repository/maven-releases/</url>		<!-- Enter Nexus http://PublicIP:8081/repository/maven-releases/ -->
      </repository>
      <snapshotRepository>
        <id>maven-snapshots</id>
-       <url>http://localhost:8081/repository/maven-snapshots/</url>	        <!-- Enter Nexus http://publicIP:8081/repository/maven-snapshots/ -->
+       <url>http://18.60.39.87:8081/repository/maven-snapshots/</url>	        <!-- Enter Nexus http://publicIP:8081/repository/maven-snapshots/ -->
      </snapshotRepository>
  </distributionManagement>
 
